...
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QlK-dj-B6W">
                                <rect key="frame" x="264" y="200" width="42" height="27"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
        <scene sceneID="HTr-np-kjo">
            <objects>
                <tableViewController storyboardIdentifier="sbMatchList" title="Match Lists" useStoryboardIdentifierAsRestorationIdentifier="YES" id="KVh-YW-wV6" userLabel="Match Lists" customClass="LIST_Matches" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="Jlu-ZO-YJ2" userLabel="Match Lists">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
        <scene sceneID="1gl-UM-kbs">
            <objects>
                <tableViewController storyboardIdentifier="sbMatchListDetails" title="Course of Fire" useStoryboardIdentifierAsRestorationIdentifier="YES" id="a9W-MX-3hA" userLabel="Match Detail List" customClass="LIST_Match_COF" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="iqx-3e-vu6">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
...
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Course of Fire:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ZGZ-qw-XDW">
                                                <rect key="frame" x="20" y="100" width="112" height="21"/>
                                                <autoresizingMask key="autoresizingMask"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Monthly / CMP / etc." textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="O70-tq-Dr8">
                                <rect key="frame" x="125" y="83" width="236" height="28.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocapitalizationType="words" autocorrectionType="no" spellCheckingType="yes"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Date of Match" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WDE-6B-0sF">
                                <rect key="frame" x="125" y="157" width="236" height="29.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Some Place, Some State" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NVL-44-1y3">
                                <rect key="frame" x="125" y="194.5" width="236" height="29.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
                                </connections>
                            </button>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="bezel" placeholder="Service Rifle/ F-Class etc." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ktV-ny-iL7">
                                <rect key="frame" x="125" y="119.5" width="236" height="28.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
